# ANNOY_from_scratch

./: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  annoy_sratch  cmake_install.cmake  main.cpp  run.sh
src/: annoy.hh
